@@ -31,7 +31,7 @@ Build-Depends:
  flex,
  bison,
  llvm-2.9-dev [amd64 i386 kfreebsd-amd64 kfreebsd-i386],
-# libwayland-dev,
+ libwayland-dev,
 Vcs-Git: git://git.debian.org/git/pkg-xorg/lib/mesa
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/lib/mesa.git
 Homepage: http://mesa3d.sourceforge.net/
